sfdx-source/Modules/ocdla-mail/objects/OcdlaEmailTemplate__c/OcdlaEmailTemplate__c.object-meta.xml
<CustomObject>
    <label>OCDLA Email Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCDLA Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>