sfdx-source/Modules/ocdla-mail/objects/OcdlaEmailTemplate__c/fields/OcdlaHtmlBody__c.field-meta.xml
<CustomField>
    <fullName>OcdlaHtmlBody__c</fullName>
    <label>OCDLA HTML Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>