sfdx-source/Modules/ocdla-mail/objects/OcdlaEmailTemplate__c/fields/OcdlaSubject__c.field-meta.xml
<CustomField>
    <fullName>OcdlaSubject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>