sfdx-source/Modules/ocdla-mail/objects/OcdlaEmailTemplate__c/fields/OcdlaTextBody__c.field-meta.xml
<CustomField>
    <fullName>OcdlaTextBody__c</fullName>
    <label>OCDLA Text Body</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>