sfdx-source/Modules/ocdla-mail/objects/OcdlaEmailTemplate__c/listViews/All_Emails.listView-meta.xml
<ListView>
    <fullName>All_Emails</fullName>
    <columns>NAME</columns>
    <columns>OcdlaSubject__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Emails</label>
    <language>en_US</language>
</ListView>